Fix: make restaurant icon smaller

--- a/homepage.css
+++ b/homepage.css
@@ -130,8 +130,8 @@ h1 {
 }
 
 .restaurant-icon {
-    width: 250px;
-    height: 250px;
+    width: 150px;
+    height: 150px;
 }
 
 .heading-wrap {
